--- a/src/modules/homepage/styles/Homepage.css
+++ b/src/modules/homepage/styles/Homepage.css
@@ -1,13 +1,18 @@
 :root {
   --light-background-color: #f8f8f7;
-  --dark-background-color: #1d1d1d;
-  --light-text-color: black;
-  --dark-text-color: white;
   --light-secondary-background: white;
-  --dark-secondary-background: rgb(52, 52, 52);
+  --light-text-color: black;
+
+  --dark-background-color: #1d1d1d;
+  --dark-secondary-background: rgba(255, 255, 255, 0.05);
+  --dark-background-secondary-color: rgba(255, 134, 142, 0.2);
+  --dark-text-color: white;
+  --dark-secondary-color: #8c8c8c;
+
   --text-secondary-color: #ff868e;
   --background-secondary-color: #fbe0dc;
-  --border-radius: 20px;
+
+  --border-radius: 10px;
 }
 
 .light {
@@ -19,16 +24,88 @@
   color: var(--dark-text-color);
 }
 
+.btn-flat {
+  background-color: var(--background-secondary-color);
+}
+.btn-flat:hover {
+  background-color: var(--background-secondary-color);
+}
+.dark .btn-flat {
+  background-color: var(--dark-background-secondary-color);
+}
+.btn-sort {
+  background-color: var(--light-background-color);
+}
+.dark .btn-sort {
+  background-color: var(--dark-secondary-background);
+}
+
+.app-block {
+  background-color: var(--light-secondary-background);
+  padding: 10px;
+  border-radius: var(--border-radius);
+  margin: 10px;
+}
+.dark .app-block {
+  background-color: var(--dark-secondary-background);
+}
+
+.dark .form-input {
+  background: var(--dark-secondary-background);
+  border-color: var(--dark-secondary-background);
+}
+
+.form-control:focus {
+  border-color: var(--dark-background-secondary-color);
+  box-shadow: inset 0 1px 1px rgbvar(--dark-background-secondary-color),
+    0 0 8px var(--dark-background-secondary-color);
+}
+.form-select:focus {
+  border-color: var(--dark-background-secondary-color);
+  box-shadow: inset 0 1px 1px var(--dark-background-secondary-color),
+    0 0 8px var(--dark-background-secondary-color);
+}
+
+.navigation-header {
+  background-color: var(--text-secondary-color);
+  color: var(--dark-text-color);
+  text-transform: uppercase;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 2px;
+  padding: 5px 30px;
+  text-align: center;
+  border-radius: var(--border-radius);
+}
+
 .Homepage {
   padding-left: 10%;
   padding-top: 30px;
+  height: 100vh;
 }
 .sticky-block {
   position: sticky;
   top: 10px;
 }
 
-/* The switch - the box around the slider */
+.header {
+  text-align: right;
+}
+.eye {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 2px 6px;
+  border-radius: 100%;
+}
+.light .eye {
+  background-color: var(--light-secondary-background);
+}
+.dark .eye {
+  background-color: var(--dark-secondary-background);
+}
+
 .switch {
   position: relative;
   display: inline-block;
@@ -36,14 +113,12 @@
   height: 24px;
 }
 
-/* Hide default HTML checkbox */
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
