style: specific bree p color

--- a/src/modules/breeds/Breeds.css
+++ b/src/modules/breeds/Breeds.css
@@ -53,7 +53,7 @@
   color: white;
 }
 .dark .SpecificBreed .info h3 {
-  background-color: var(--dark-secondary-background);
+  background-color: var(#282828);
 }
 .temper {
   text-align: left;
